connect to the db and make changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,11 @@ date.format=yyyy-MM-dd
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
+
+db.url=jdbc:mysql://121.42.145.100:3306/test
+db.driver=com.mysql.jdbc.Driver
+db.user=ishop
+db.pass=ishop
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
@@ -111,6 +116,9 @@ date.format=yyyy-MM-dd
 
 # JPA Configuration (Hibernate)
 # ~~~~~
+
+jpa.dialect=org.hibernate.dialect.MySQLDialect
+jpa.debugSQL=true//在控制台里面可以看到生成的SQL语句
 #
 # Specify the custom JPA dialect to use here (default to guess):
 # jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
